2010-03-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Adam Barth.

        Actually pass the IRC password to the IRC object
        https://bugs.webkit.org/show_bug.cgi?id=36346

        I wanted to do this before, but both patches were in flight.  This
        patch finally closes the loop and makes the IRCProxy system complete.

        * Scripts/webkitpy/patch/patcher.py:

2010-03-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add a StatusServer front end to the SVNRevision table on QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=36344

        No test because Browser was too hard to mock.  :(  I couldn't figure
        out how to make Mock be a dictionary as well as an object.

        * Scripts/webkitpy/statusserver.py:

2010-03-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Split out CommitInfo class and add unit tests
        https://bugs.webkit.org/show_bug.cgi?id=36343

        Move more logic out of "what-broke" into a shared CommitInfo
        class so that it can be used by other commands and unit tested.

        * Scripts/webkitpy/commands/queries.py:
        * Scripts/webkitpy/commitinfo.py: Added.
        * Scripts/webkitpy/commitinfo_unittest.py: Added.
        * Scripts/webkitpy/unittests.py:

2010-03-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix LayoutTests/http/tests/appcache/max-size.html
        https://bugs.webkit.org/show_bug.cgi?id=36207

        Implement setAppCacheMaximumSize() for Qt.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setAppCacheMaximumSize):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-03-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        QueueStatusServer should be able to log broken bots
        https://bugs.webkit.org/show_bug.cgi?id=36341
