@@ -1,3 +1,13 @@
+2010-03-19  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Move find_green_to_red_transition out of "what-broke" onto Builder for easier re-use
+        https://bugs.webkit.org/show_bug.cgi?id=36345
+
+        * Scripts/webkitpy/buildbot.py:
+        * Scripts/webkitpy/commands/queries.py:
+
 2010-03-19  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Adam Barth.
